--- a/src/components/AppPromo/AppPromo.css
+++ b/src/components/AppPromo/AppPromo.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 70vh;
     width: 98.75vw;
     margin-top: 40px;
     background-image: url(https://images.unsplash.com/photo-1469013078550-305e63b7c8f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -12,7 +12,7 @@
 }
 
 .wrap {
-    width: 60%;
+    width: 70%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -64,7 +64,7 @@
     width: 50%;
 }
 
-.task-List li {
+.task-List {
     list-style-type: none; 
     border: 1px solid #ccc; 
     border-radius: 4px; 
